tests/mm0_mmu/fail/bad-sort143.mmu
-- bad modifier order
(sort s143 pure free provable)